--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,14 @@
 /venv
 /uglyimg
 /municipiosPDF
+/PUEBLA
+/PUEBLA - Copy
+/ESTADOSnotText
+/ESTADOS
+/Bandos Manuales.xlsx
+/ESTADOS.zip
+/ResumenIMGS.csv
+/Resumen.csv
+/Reshape Resumen.csv
+/Resumen Puebla.csv
+/Resumen ESTADOS.csv
